--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="button-container">
             <button id="shuffle" class="button" ><i class="bi bi-shuffle"></i></button>
             <button id="previous" class="button button-navigate"><i class="bi bi-skip-start-fill"></i></button>
-            <button id="play" class="button button-biggest"><i class="bi bi-pause-circle-fill"></i></button>
+            <button id="play" class="button button-biggest"><i class="bi bi-play-circle-fill"></i></button>
             <button id="next" class="button button-navigate"><i class="bi bi-skip-end-fill"></i></button>
             <button id="repeat" class="button"><i class="bi bi-repeat"></i></button>
         </div>
