--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div>
 
         <h4 id="playlist-title">Music Playlist</h4>
-        <img id="cover" src="/img/pato.jpg" alt="opato">
-        <audio id="audio" src="/songs/o_pato.mp3"></audio>
+        <img id="cover"alt="Disc Cover">
+        <audio id="audio" ></audio>
         <div id="below-cover">
             <div id="info-song">
                 <div id="song-name">Music name</div>
