--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <div id="progress-container">
             <div id="progress-bar">
                 <div id="current-progress"></div>
+                <div id="time-box">
+                    <div id="song-time">00:00:00</div>
+                    <div id="total-time">00:00:00</div>
+                </div>
             </div>
         </div>
         <div id="button-container">
