--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div id="song-name">Music name</div>
                 <div id="band-name" class="light-color">Band name</div>
             </div>
-            <button class="button light-color"><i class="bi bi-heart"></i></button>
+            <button id="like" class="button light-color"><i class="bi bi-heart"></i></button>
         </div>
         <div id="progress-container">
             <div id="progress-bar">
